--- a/ovtlyr/stock-detail.html
+++ b/ovtlyr/stock-detail.html
@@ -229,11 +229,11 @@ if (localStorage.getItem('darkMode') === "on") {
                       <li class="dropdown__item search_item active_org active">
                         <a href="#">
                           <div class="item_box">
-                            <div class="arrow_up org_square">
-                              <img src="images/communication.svg" alt="Communication" />
-                              <h6>Communication</h6>
+                            <div class="arrow_up blue_square">
+                              <img src="images/sandp.svg" alt="S&amp;P 500" />
+                              <h6>S&amp;P 500</h6>
                             </div>
-                            <p>Alphabet (GOOGL, GOOG), TMobile (TMUS), Netflix (NFLX) etc.</p>
+                            <p>AAPL (Apple Inc) , MSFT (Microsoft Corporation) , GOOGL (Alphabet Inc - Class A) , AMZN (Amazon.com Inc) , NVDA (NVIDIA Corp)</p>
                           </div>
                         </a>
                       </li>
@@ -242,9 +242,9 @@ if (localStorage.getItem('darkMode') === "on") {
                           <div class="item_box">
                             <div class="arrow_up org_square">
                               <img src="images/div.svg" alt="DIV" />
-                              <h6>DIV</h6>
+                              <h6>DJIA</h6>
                             </div>
-                            <p> AAPL (Apple Inc) , MSFT (Microsoft Corporation) , V (Visa Inc - Class A) , UNH (Unitedhealth Group Inc) , JPM (JPMorgan Chase &amp; Company)</p>
+                            <p>AAPL (Apple Inc) , MSFT (Microsoft Corporation) , V (Visa Inc - Class A) , JPM (JPMorgan Chase &amp; Company) , UNH (Unitedhealth Group Inc)</p>
                           </div>
                         </a>
                       </li>
@@ -255,7 +255,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/discretionary.svg" alt="Discretionary" />
                               <h6>Discretionary</h6>
                             </div>
-                            <p>Amazon (AMZN), Tesla, Inc (TSLA), The Home Depot (HD) etc.c.</p>
+                            <p>AMZN (Amazon.com Inc) , TSLA (Tesla Inc) , HD (Home Depot Inc) , TM (Toyota Motor Corporation) , MCD (McDonald`s Corp)</p>
                           </div>
                         </a>
                       </li>
@@ -266,7 +266,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/energy.svg" alt="Energy" />
                               <h6>Energy</h6>
                             </div>
-                            <p>Exxon Mobil (XOM), Chevron Corporation (CVX) etc.</p>
+                            <p>XOM (Exxon Mobil Corp) , CVX (Chevron Corp) , TTE (TotalEnergies SE) , COP (Conoco Phillips) , BP (BP plc)</p>
                           </div>
                         </a>
                       </li>
@@ -277,7 +277,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/financial.svg" alt="Financial" />
                               <h6>Financial</h6>
                             </div>
-                            <p>JPMorgan Chase (JPM), Visa Inc (V),etc..</p>
+                            <p>BRK/B (Berkshire Hathaway Inc - Class B) , V (Visa Inc - Class A) , JPM (JPMorgan Chase & Company) , MA (Mastercard Incorporated - Class A) , BAC (Bank Of America Corp)</p>
                           </div>
                         </a>
                       </li>
@@ -288,7 +288,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/health.svg" alt="Health Care" />
                               <h6>Health Care</h6>
                             </div>
-                            <p>United Health Group (UNH), Johnson & Johnson ((JNJ), Pfizer PFE), etc.</p>
+                            <p>LLY (Lilly(Eli) &amp; Company) , UNH (Unitedhealth Group Inc) , JNJ (Johnson &amp; Johnson) , MRK (Merck &amp; Co Inc) , ABBV (Abbvie Inc)</p>
                           </div>
                         </a>
                       </li>
@@ -299,7 +299,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/industrials.svg" alt="Industrials" />
                               <h6>Industrials</h6>
                             </div>
-                            <p>Exxon Mobil (XOM), Chevron Corporation (CVX) etc.</p>
+                            <p>UNP (Union Pacific Corp) , CAT (Caterpillar Inc) , GE (General Electric Company) , UPS (United Parcel Service Inc - Class B) , HON (Honeywell International Inc)</p>
                           </div>
                         </a>
                       </li>
@@ -310,7 +310,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/materials.svg" alt="Materials" />
                               <h6>Materials</h6>
                             </div>
-                            <p>Barrick Gold Corporation (GOLD), Vale S.A (VALE)</p>
+                            <p>LIN (Linde Plc) , BHP (BHP Group Ltd) , RIO (Rio Tinto plc) , SHW (Sherwin-Williams Company) , VALE (Vale S.A.)</p>
                           </div>
                         </a>
                       </li>
@@ -321,7 +321,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/realestate.svg" alt="Real Estate" />
                               <h6>Real Estate</h6>
                             </div>
-                            <p>Prologis (PLD), American Tower Corporation (AMT),etc.</p>
+                            <p>PLD (Prologis Inc) , AMT (American Tower Corp) , EQIX (Equinix Inc) , PSA (Public Storage) , CCI (Crown Castle International Corp)</p>
                           </div>
                         </a>
                       </li>
@@ -332,7 +332,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/staples.svg" alt="Staples" />
                               <h6>Staples</h6>
                             </div>
-                            <p>Walmart Int (WMT), The Proctor & Gamble Company (PG), etc.</p>
+                            <p>WMT (Walmart Inc) , PG (Procter &amp; Gamble Company) , COST (Costco Wholesale Corp) , KO (Coca-Cola Company) , PEP (PepsiCo Inc)</p>
                           </div>
                         </a>
                       </li>
@@ -343,7 +343,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/technology.svg" alt="Technology" />
                               <h6>Technology</h6>
                             </div>
-                            <p>Apple (AAPL) and Microsoft (MSFT),Oracle (ORCL) etc.</p>
+                            <p>AAPL (Apple Inc) , MSFT (Microsoft Corporation) , NVDA (NVIDIA Corp) , TSM (Taiwan Semiconductor Manufacturing) , AVGO (Broadcom Inc)</p>
                           </div>
                         </a>
                       </li>
@@ -354,7 +354,7 @@ if (localStorage.getItem('darkMode') === "on") {
                               <img src="images/utilities.svg" alt="Utilities" />
                               <h6>Utilities</h6>
                             </div>
-                            <p>NextEra Energy (NEE), Duke Energy (DUK),etc.</p>
+                            <p>NEE (NextEra Energy Inc) , SO (Southern Company) , DUK (Duke Energy Corp) , NGG (National Grid Plc) , SRE (Sempra Energy)</p>
                           </div>
                         </a>
                       </li>
@@ -362,9 +362,10 @@ if (localStorage.getItem('darkMode') === "on") {
                         <a href="#">
                           <div class="item_box">
                             <div class="arrow_up org_square">
-                              <img src="images/sandp.svg" alt="S&P 500" />
-                              <h6>S&P 500</h6>
+                              <img src="images/communication.svg" alt="Communication" />
+                              <h6>Communication</h6>
                             </div>
+                            <p>GOOGL (Alphabet Inc - Class A) , META (Meta Platforms Inc - Class A) , NFLX (NetFlix Inc) , TMUS (T-Mobile US Inc) , CMCSA (Comcast Corp - Class A)</p>
                           </div>
                         </a>
                       </li>
